Fix profile name alignment

--- a/app/assets/stylesheets/pages/profile_page.sass
+++ b/app/assets/stylesheets/pages/profile_page.sass
@@ -162,9 +162,13 @@
         cursor: pointer
         text-decoration: none
         word-wrap: break-word
+        span
+          float: left
+          width: 490px
         &.visitor
           cursor: default
         .fa
+          float: left
           max-width: 517px
           word-wrap: break-word
           &:before
